--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAAwh/XSIdTIjD6JqfBevx",
+      "authorship_tag": "ABX9TyMP+6ZWi41T2qAsmL2vVEo/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9048,7 +9048,9 @@
       "source": [
         "Un valor de **asimetría** (*skewness*) cercano a 0 (entre -0.5 y 0.5) indica que los datos están simétricamente distribuidos alrededor de la media. Valores positivos indican una distribución sesgada a la derecha (cola larga a la derecha), mientras que valores negativos indican una distribución sesgada a la izquierda (cola larga a la izquierda)\n",
         "\n",
-        "Por su parte, la **curtosis** (*kurtosis*) mide la \"agudeza\" de la distribución de los datos (o la concentración de los valores de la variable). La curtosis de Fisher, que es la que calcula 'scipy.stats.describe', está normalizada para que una distribución normal tenga una curtosis de 0. Valores positivos indican mayor concentración de los datos en torno a la media; es decir, una distribución con colas más pesadas (más picos, menos colas). Mientras que valores negativos indican una distribución de los datos más alejados de la media; es decir, con colas más ligeras (menos picos, más colas)."
+        "Por su parte, la **curtosis** (*kurtosis*) mide la \"agudeza\" de la distribución de los datos (o la concentración de los valores de la variable). La curtosis de Fisher, que es la que calcula 'scipy.stats.describe', está normalizada para que una distribución normal tenga una curtosis de 0. Valores positivos indican mayor concentración de los datos en torno a la media; es decir, una distribución con colas más pesadas (más picos, menos colas). Mientras que valores negativos indican una distribución de los datos más alejados de la media; es decir, con colas más ligeras (menos picos, más colas).\n",
+        "\n",
+        "Luego, una distribución normal idealmente tiene una asimetría cercana a 0 y una curtosis cercana a 0."
       ],
       "metadata": {
         "id": "UXmch7IaQR19"
@@ -9062,57 +9064,41 @@
         "numerical_features = ['fixed acidity','volatile acidity','citric acid', 'residual sugar','chlorides','free sulfur dioxide','total sulfur dioxide','density','pH','sulphates','alcohol']\n",
         "df_long = pd.melt(df, id_vars=['type'], value_vars=caracteristica, var_name='feature', value_name='value')\n",
         "\n",
-        "for _, feature in enumerate(caracteristica):\n",
-        "  print(f'Estadística de la variable \"{feature}\":')\n",
-        "  print(f'{stats.describe(df[feature])}\\n')\n",
-        "  #print(f'Estadística de la variable \"{feature}\": {stats.describe(df[feature])}')"
+        "results = []                            # lista para almacenar los resultados\n",
+        "\n",
+        "for feature in numerical_features:      # Calculo estadísticas descriptivas para cada característica\n",
+        "    desc = stats.describe(df[feature])\n",
+        "    results.append([feature, desc.skewness.round(3), desc.kurtosis.round(3)])\n",
+        "\n",
+        "results_df = pd.DataFrame(results, columns=['Variable', 'Asimetría', 'Curtosis'])   # Se crea un DataFrame con los resultados\n",
+        "\n",
+        "print(results_df)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KDSPoZYTOQZC",
-        "outputId": "bd2a4f7f-2fe3-4c41-9e37-3b98531d89b3"
+        "outputId": "1ee11365-1d23-4d59-8f1f-ef2581c82aab"
       },
-      "execution_count": 64,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Estadística de la variable \"fixed acidity\":\n",
-            "DescribeResult(nobs=5329, minmax=(3.8, 15.9), mean=7.216402702195532, variance=1.737636850563267, skewness=1.6511564862242236, kurtosis=4.5975709402764515)\n",
-            "\n",
-            "Estadística de la variable \"volatile acidity\":\n",
-            "DescribeResult(nobs=5329, minmax=(0.08, 1.58), mean=0.3440607993995121, variance=0.028269580386823298, skewness=1.506008904651531, kurtosis=2.8675881274506105)\n",
-            "\n",
-            "Estadística de la variable \"citric acid\":\n",
-            "DescribeResult(nobs=5329, minmax=(0.0, 1.66), mean=0.31873897541752677, variance=0.021631480089115196, skewness=0.48435366721924394, kurtosis=2.578151686502385)\n",
-            "\n",
-            "Estadística de la variable \"residual sugar\":\n",
-            "DescribeResult(nobs=5329, minmax=(0.6, 65.8), mean=5.053910677425408, variance=20.278661467995956, skewness=1.7025011665841152, kurtosis=6.98194309993675)\n",
-            "\n",
-            "Estadística de la variable \"chlorides\":\n",
-            "DescribeResult(nobs=5329, minmax=(0.009, 0.611), mean=0.056665790955151056, variance=0.001357026609176262, skewness=5.340566836926632, kurtosis=48.28332199556044)\n",
-            "\n",
-            "Estadística de la variable \"free sulfur dioxide\":\n",
-            "DescribeResult(nobs=5329, minmax=(1.0, 289.0), mean=30.0601426158754, variance=317.3951716012785, skewness=1.3582571378203268, kurtosis=9.463405122228282)\n",
-            "\n",
-            "Estadística de la variable \"total sulfur dioxide\":\n",
-            "DescribeResult(nobs=5329, minmax=(6.0, 440.0), mean=114.18934133983862, variance=3224.1298713566257, skewness=0.061679285863074126, kurtosis=-0.30336748319239026)\n",
-            "\n",
-            "Estadística de la variable \"density\":\n",
-            "DescribeResult(nobs=5329, minmax=(0.98711, 1.03898), mean=0.9945358810283355, variance=8.794957589822062e-06, skewness=0.6645636642660108, kurtosis=8.683915901102884)\n",
-            "\n",
-            "Estadística de la variable \"pH\":\n",
-            "DescribeResult(nobs=5329, minmax=(2.72, 4.01), mean=3.2244342278100953, variance=0.025648933783192083, skewness=0.3913809273710168, kurtosis=0.4394943125321902)\n",
-            "\n",
-            "Estadística de la variable \"sulphates\":\n",
-            "DescribeResult(nobs=5329, minmax=(0.22, 2.0), mean=0.5332876712328768, variance=0.022405668168168167, skewness=1.8084890670997642, kurtosis=8.606117713952747)\n",
-            "\n",
-            "Estadística de la variable \"alcohol\":\n",
-            "DescribeResult(nobs=5329, minmax=(8.0, 14.9), mean=10.548538812781947, variance=1.406912933764398, skewness=0.545991744487456, kurtosis=-0.5388265936888592)\n",
-            "\n"
+            "                Variable  Asimetría  Curtosis\n",
+            "0          fixed acidity      1.651     4.598\n",
+            "1       volatile acidity      1.506     2.868\n",
+            "2            citric acid      0.484     2.578\n",
+            "3         residual sugar      1.703     6.982\n",
+            "4              chlorides      5.341    48.283\n",
+            "5    free sulfur dioxide      1.358     9.463\n",
+            "6   total sulfur dioxide      0.062    -0.303\n",
+            "7                density      0.665     8.684\n",
+            "8                     pH      0.391     0.439\n",
+            "9              sulphates      1.808     8.606\n",
+            "10               alcohol      0.546    -0.539\n"
           ]
         }
       ]
