--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6d0kyJYKIHSF7J3BvBnX+",
+      "authorship_tag": "ABX9TyO5khv9tjRNemBWmEZCVQya",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9118,48 +9118,35 @@
         "    statsRed = stats.describe(df_red[feature])\n",
         "    results.append([feature, statsWhite.skewness.round(3), statsWhite.kurtosis.round(3), statsRed.skewness.round(3), statsRed.kurtosis.round(3)])\n",
         "\n",
-        "results_df = pd.DataFrame(results, columns=['VARIABLE', 'Asimetria WHITE', 'Curtosis WHITE', 'Asimetria RED', 'Curtosis RED'])   # Se crea un DataFrame con los resultados\n",
+        "results_df = pd.DataFrame(results, columns=['VARIABLE', 'Asim WHITE', 'Curt WHITE', 'Asim RED', 'Curt RED'])   # Se crea un DataFrame con los resultados\n",
         "\n",
         "print(results_df)"
       ],
       "metadata": {
-        "id": "1dzFMpHy-9Gz",
-        "outputId": "de53c47e-f6ea-442a-ad8b-16c13b8330ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1dzFMpHy-9Gz",
+        "outputId": "4fe44859-abbd-4930-f8c0-61fe828f0048"
       },
-      "execution_count": 54,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "                VARIABLE  Asimetria WHITE  Curtosis WHITE  Asimetria RED  \\\n",
-            "0          fixed acidity             0.69            2.26           0.94   \n",
-            "1       volatile acidity             1.64            5.32           0.73   \n",
-            "2            citric acid             1.31            6.81           0.31   \n",
-            "3         residual sugar             1.33            5.65           4.54   \n",
-            "4              chlorides             4.97           35.56           5.50   \n",
-            "5    free sulfur dioxide             1.56           13.35           1.23   \n",
-            "6   total sulfur dioxide             0.45            0.73           1.54   \n",
-            "7                density             1.27           14.11           0.04   \n",
-            "8                     pH             0.46            0.56           0.23   \n",
-            "9              sulphates             0.94            1.55           2.41   \n",
-            "10               alcohol             0.45           -0.70           0.86   \n",
-            "\n",
-            "    Curtosis RED  \n",
-            "0           1.05  \n",
-            "1           1.24  \n",
-            "2          -0.79  \n",
-            "3          29.25  \n",
-            "4          38.48  \n",
-            "5           1.88  \n",
-            "6           4.02  \n",
-            "7           0.82  \n",
-            "8           0.89  \n",
-            "9          11.07  \n",
-            "10          0.15  \n"
+            "                VARIABLE  Asim WHITE  Curt WHITE  Asim RED  Curt RED\n",
+            "0          fixed acidity       0.695       2.261     0.940     1.048\n",
+            "1       volatile acidity       1.644       5.323     0.731     1.245\n",
+            "2            citric acid       1.308       6.809     0.312    -0.788\n",
+            "3         residual sugar       1.330       5.646     4.543    29.252\n",
+            "4              chlorides       4.972      35.560     5.496    38.478\n",
+            "5    free sulfur dioxide       1.560      13.348     1.225     1.881\n",
+            "6   total sulfur dioxide       0.454       0.726     1.539     4.023\n",
+            "7                density       1.269      14.112     0.045     0.823\n",
+            "8                     pH       0.457       0.558     0.233     0.888\n",
+            "9              sulphates       0.936       1.551     2.406    11.068\n",
+            "10               alcohol       0.451      -0.697     0.859     0.155\n"
           ]
         }
       ]
