--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5khv9tjRNemBWmEZCVQya",
+      "authorship_tag": "ABX9TyOwg0uegGd/tvSs77ldWROQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9067,53 +9067,6 @@
         "results = []                            # lista para almacenar los resultados\n",
         "\n",
         "for feature in numerical_features:      # Calculo estadísticas descriptivas para cada característica\n",
-        "    desc = stats.describe(df[feature])\n",
-        "    results.append([feature, desc.skewness.round(3), desc.kurtosis.round(3)])\n",
-        "\n",
-        "results_df = pd.DataFrame(results, columns=['Variable', 'Asimetría', 'Curtosis'])   # Se crea un DataFrame con los resultados\n",
-        "\n",
-        "print(results_df)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KDSPoZYTOQZC",
-        "outputId": "d17bb223-fe8b-455c-d152-9f67af508a63"
-      },
-      "execution_count": 51,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "                Variable  Asimetría  Curtosis\n",
-            "0          fixed acidity      1.653     4.598\n",
-            "1       volatile acidity      1.505     2.861\n",
-            "2            citric acid      0.444     2.394\n",
-            "3         residual sugar      1.713     7.103\n",
-            "4              chlorides      5.331    48.103\n",
-            "5    free sulfur dioxide      0.739     0.758\n",
-            "6   total sulfur dioxide     -0.049    -0.689\n",
-            "7                density      0.668     8.752\n",
-            "8                     pH      0.390     0.445\n",
-            "9              sulphates      1.809     8.585\n",
-            "10               alcohol      0.546    -0.539\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Se analiza la asimetría de las variables\n",
-        "\n",
-        "numerical_features = ['fixed acidity','volatile acidity','citric acid', 'residual sugar','chlorides','free sulfur dioxide','total sulfur dioxide','density','pH','sulphates','alcohol']\n",
-        "df_long = pd.melt(df, id_vars=['type'], value_vars=caracteristica, var_name='feature', value_name='value')\n",
-        "\n",
-        "results = []                            # lista para almacenar los resultados\n",
-        "\n",
-        "for feature in numerical_features:      # Calculo estadísticas descriptivas para cada característica\n",
         "    statsWhite = stats.describe(df_white[feature])\n",
         "    statsRed = stats.describe(df_red[feature])\n",
         "    results.append([feature, statsWhite.skewness.round(3), statsWhite.kurtosis.round(3), statsRed.skewness.round(3), statsRed.kurtosis.round(3)])\n",
@@ -9150,6 +9103,22 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "💡 INSIGHTS\n",
+        "\n",
+        "Del análisis estadístico pareciera que las variables que más se aproximan a una distribución normal son:\n",
+        "* En vinos blancos: \"alcohol\", \"total sulfur dioxide\" y \"pH\"\n",
+        "* En vinos tintos: \"density\", \"pH\" y \"citric acid\"\n",
+        "\n",
+        "No obstante, esto no se condice con la imagen del histograma correspondiente.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "kU7a0-m0BGlB"
+      }
     },
     {
       "cell_type": "code",
