--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwg0uegGd/tvSs77ldWROQ",
+      "authorship_tag": "ABX9TyPvQws+xm37HtoaWeV/3fqA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9201,10 +9201,8 @@
         "💡 INSIGHTS\n",
         "\n",
         "De la observación de los histogramas pareciera que las siguientes variables siguen una distribución normal:\n",
-        "- \"fixed acidity\" en vino blancos (type = 1)\n",
-        "- \"chlorides\" en vino blancos (type = 1)\n",
-        "- \"density\" en vino tintos (type = 0)\n",
-        "- \"pH\" en vino tintos (type = 0)"
+        "- En vinos blancos: \"fixed acidity\", \"chlorides\".\n",
+        "- En vinos blancos: \"density\", \"pH\""
       ],
       "metadata": {
         "id": "VhnUZ1TXOpv9"
