--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPvQws+xm37HtoaWeV/3fqA",
+      "authorship_tag": "ABX9TyOO3RFQTyiveXizq00P8IvE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9046,6 +9046,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "💡 INSIGHTS\n",
+        "\n",
+        "De la observación de los histogramas pareciera que las siguientes variables siguen una distribución normal:\n",
+        "- En vinos blancos: \"fixed acidity\", \"chlorides\".\n",
+        "- En vinos tintos: \"chlorides\", \"density\", \"pH\""
+      ],
+      "metadata": {
+        "id": "VhnUZ1TXOpv9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Un valor de **asimetría** (*skewness*) cercano a 0 (entre -0.5 y 0.5) indica que los datos están simétricamente distribuidos alrededor de la media. Valores positivos indican una distribución sesgada a la derecha (cola larga a la derecha), mientras que valores negativos indican una distribución sesgada a la izquierda (cola larga a la izquierda)\n",
         "\n",
         "Por su parte, la **curtosis** (*kurtosis*) mide la \"agudeza\" de la distribución de los datos (o la concentración de los valores de la variable). La curtosis de Fisher, que es la que calcula 'scipy.stats.describe', está normalizada para que una distribución normal tenga una curtosis de 0. Valores positivos indican mayor concentración de los datos en torno a la media; es decir, una distribución con colas más pesadas (más picos, menos colas). Mientras que valores negativos indican una distribución de los datos más alejados de la media; es decir, con colas más ligeras (menos picos, más colas).\n",
@@ -9193,19 +9206,6 @@
       ],
       "metadata": {
         "id": "xVjsBffO3mYP"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "💡 INSIGHTS\n",
-        "\n",
-        "De la observación de los histogramas pareciera que las siguientes variables siguen una distribución normal:\n",
-        "- En vinos blancos: \"fixed acidity\", \"chlorides\".\n",
-        "- En vinos blancos: \"density\", \"pH\""
-      ],
-      "metadata": {
-        "id": "VhnUZ1TXOpv9"
       }
     },
     {
