--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOO3RFQTyiveXizq00P8IvE",
+      "authorship_tag": "ABX9TyNnNxiT59WXYTXxixGw0PkV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9126,8 +9126,7 @@
         "* En vinos blancos: \"alcohol\", \"total sulfur dioxide\" y \"pH\"\n",
         "* En vinos tintos: \"density\", \"pH\" y \"citric acid\"\n",
         "\n",
-        "No obstante, esto no se condice con la imagen del histograma correspondiente.\n",
-        "\n"
+        "No obstante, esto no se condice del todo con las imagenes de los histogramas correspondientes."
       ],
       "metadata": {
         "id": "kU7a0-m0BGlB"
@@ -9212,7 +9211,7 @@
       "cell_type": "code",
       "source": [
         "# Se arma un diciconario con las variables por tipo a analizar con el test estadístico\n",
-        "diccionario = {'fixed acidity':1, 'chlorides':1, 'density':0, 'pH':0}"
+        "diccionario = {'fixed acidity':1, 'alcohol':1, 'total sulfur dioxide':1, 'pH':1, 'chlorides':1, 'density':0, 'pH':0, 'chlorides':0, 'citric acid':0}"
       ],
       "metadata": {
         "id": "GV39GFDfOjUf"
