--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7vNSVe9oji2kr5AQpZLrH",
+      "authorship_tag": "ABX9TyMaR62UYj/rxe5fY3KOgXJe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9120,29 +9120,29 @@
         "# Se analiza la asimetría de las variables WHITE\n",
         "\n",
         "numerical_features = ['fixed acidity','volatile acidity','citric acid', 'residual sugar','chlorides','free sulfur dioxide','total sulfur dioxide','density','pH','sulphates','alcohol']\n",
-        "results = []        # lista para almacenar los resultados\n",
+        "resultsWhite = []        # lista para almacenar los resultados\n",
         "\n",
         "for feature in numerical_features:      # Calculo estadísticas descriptivas para cada característica\n",
         "    metricas = stats.describe(df_white[feature])\n",
-        "    results.append([  feature,\n",
+        "    resultsWhite.append([  feature,\n",
         "                      df_white[feature].mean(),\n",
         "                      df_white[feature].median(),\n",
         "                      df_white[feature].mode()[0],\n",
         "                      metricas.skewness.round(3),\n",
         "                      metricas.kurtosis.round(3)])\n",
         "\n",
-        "results_df = pd.DataFrame(results, columns=['Variable WHITE', 'Media', 'Mediana', 'Moda', 'Asimetría', 'Curtosis'])   # Se crea un DataFrame con los resultados\n",
+        "results_df = pd.DataFrame(resultsWhite, columns=['Variable WHITE', 'Media', 'Mediana', 'Moda', 'Asimetría', 'Curtosis'])   # Se crea un DataFrame con los resultados\n",
         "\n",
         "print(results_df)"
       ],
       "metadata": {
-        "id": "k-NAqngHM-wJ",
-        "outputId": "2d9f07ce-5906-4062-ca2f-06d5e05f8895",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "k-NAqngHM-wJ",
+        "outputId": "412cf036-8599-4a85-a18a-1740663f92d5"
       },
-      "execution_count": 177,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "stream",
@@ -9170,35 +9170,35 @@
         "# Se analiza la asimetría de las variables RED\n",
         "\n",
         "numerical_features = ['fixed acidity','volatile acidity','citric acid', 'residual sugar','chlorides','free sulfur dioxide','total sulfur dioxide','density','pH','sulphates','alcohol']\n",
-        "results = []          # lista para almacenar los resultados\n",
+        "resultsRed = []          # lista para almacenar los resultados\n",
         "\n",
         "for feature in numerical_features:      # Calculo estadísticas descriptivas para cada característica\n",
         "    metricas = stats.describe(df_red[feature])\n",
-        "    results.append([  feature,\n",
+        "    resultsRed.append([  feature,\n",
         "                      df_red[feature].mean(),\n",
         "                      df_red[feature].median(),\n",
         "                      df_red[feature].mode()[0],\n",
         "                      metricas.skewness.round(3),\n",
         "                      metricas.kurtosis.round(3)])\n",
         "\n",
-        "results_df = pd.DataFrame(results, columns=['Variable WHITE', 'Media', 'Mediana', 'Moda', 'Asimetría', 'Curtosis'])   # Se crea un DataFrame con los resultados\n",
+        "results_df = pd.DataFrame(resultsRed, columns=['Variable RED', 'Media', 'Mediana', 'Moda', 'Asimetría', 'Curtosis'])   # Se crea un DataFrame con los resultados\n",
         "\n",
         "print(results_df)"
       ],
       "metadata": {
-        "id": "yTLth9vpQw3L",
-        "outputId": "034c6866-7a05-417c-bb49-b263514867d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yTLth9vpQw3L",
+        "outputId": "f8a4c226-7e38-4bf1-90b4-2359b584d5b9"
       },
-      "execution_count": 180,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "          Variable WHITE      Media  Mediana     Moda  Asimetría  Curtosis\n",
+            "            Variable RED      Media  Mediana     Moda  Asimetría  Curtosis\n",
             "0          fixed acidity   8.313400   7.9000   7.2000      0.940     1.048\n",
             "1       volatile acidity   0.529360   0.5200   0.5000      0.731     1.245\n",
             "2            citric acid   0.272539   0.2600   0.0000      0.312    -0.788\n",
