--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMaR62UYj/rxe5fY3KOgXJe",
+      "authorship_tag": "ABX9TyPMmaP5Codcfz0r6Axx0/Ot",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9125,7 +9125,7 @@
         "for feature in numerical_features:      # Calculo estadísticas descriptivas para cada característica\n",
         "    metricas = stats.describe(df_white[feature])\n",
         "    resultsWhite.append([  feature,\n",
-        "                      df_white[feature].mean(),\n",
+        "                      df_white[feature].mean().round(3),\n",
         "                      df_white[feature].median(),\n",
         "                      df_white[feature].mode()[0],\n",
         "                      metricas.skewness.round(3),\n",
@@ -9140,26 +9140,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k-NAqngHM-wJ",
-        "outputId": "412cf036-8599-4a85-a18a-1740663f92d5"
+        "outputId": "72fb0c8a-0d14-45b7-c304-e88ef6c6427c"
       },
-      "execution_count": 182,
+      "execution_count": 188,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "          Variable WHITE       Media   Mediana     Moda  Asimetría  Curtosis\n",
-            "0          fixed acidity    6.840882    6.8000    6.800      0.695     2.261\n",
-            "1       volatile acidity    0.280630    0.2600    0.280      1.644     5.323\n",
-            "2            citric acid    0.334554    0.3200    0.300      1.308     6.809\n",
-            "3         residual sugar    5.920149    4.7000    1.200      1.330     5.646\n",
-            "4              chlorides    0.045897    0.0420    0.036      4.972    35.560\n",
-            "5    free sulfur dioxide   34.909698   33.0000   29.000      1.560    13.348\n",
-            "6   total sulfur dioxide  137.248992  133.0000  111.000      0.454     0.726\n",
-            "7                density    0.993792    0.9935    0.992      1.269    14.112\n",
-            "8                     pH    3.195317    3.1800    3.160      0.457     0.558\n",
-            "9              sulphates    0.490395    0.4800    0.500      0.936     1.551\n",
-            "10               alcohol   10.588324   10.4000    9.500      0.451    -0.697\n"
+            "          Variable WHITE    Media   Mediana     Moda  Asimetría  Curtosis\n",
+            "0          fixed acidity    6.841    6.8000    6.800      0.695     2.261\n",
+            "1       volatile acidity    0.281    0.2600    0.280      1.644     5.323\n",
+            "2            citric acid    0.335    0.3200    0.300      1.308     6.809\n",
+            "3         residual sugar    5.920    4.7000    1.200      1.330     5.646\n",
+            "4              chlorides    0.046    0.0420    0.036      4.972    35.560\n",
+            "5    free sulfur dioxide   34.910   33.0000   29.000      1.560    13.348\n",
+            "6   total sulfur dioxide  137.249  133.0000  111.000      0.454     0.726\n",
+            "7                density    0.994    0.9935    0.992      1.269    14.112\n",
+            "8                     pH    3.195    3.1800    3.160      0.457     0.558\n",
+            "9              sulphates    0.490    0.4800    0.500      0.936     1.551\n",
+            "10               alcohol   10.588   10.4000    9.500      0.451    -0.697\n"
           ]
         }
       ]
@@ -9175,7 +9175,7 @@
         "for feature in numerical_features:      # Calculo estadísticas descriptivas para cada característica\n",
         "    metricas = stats.describe(df_red[feature])\n",
         "    resultsRed.append([  feature,\n",
-        "                      df_red[feature].mean(),\n",
+        "                      df_red[feature].mean().round(3),\n",
         "                      df_red[feature].median(),\n",
         "                      df_red[feature].mode()[0],\n",
         "                      metricas.skewness.round(3),\n",
@@ -9190,26 +9190,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yTLth9vpQw3L",
-        "outputId": "f8a4c226-7e38-4bf1-90b4-2359b584d5b9"
+        "outputId": "de9673c2-e0b9-41ed-fe1d-c61214827d50"
       },
-      "execution_count": 184,
+      "execution_count": 189,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "            Variable RED      Media  Mediana     Moda  Asimetría  Curtosis\n",
-            "0          fixed acidity   8.313400   7.9000   7.2000      0.940     1.048\n",
-            "1       volatile acidity   0.529360   0.5200   0.5000      0.731     1.245\n",
-            "2            citric acid   0.272539   0.2600   0.0000      0.312    -0.788\n",
-            "3         residual sugar   2.523400   2.2000   2.0000      4.543    29.252\n",
-            "4              chlorides   0.088124   0.0790   0.0800      5.496    38.478\n",
-            "5    free sulfur dioxide  15.893304  14.0000   6.0000      1.225     1.881\n",
-            "6   total sulfur dioxide  46.825975  38.0000  28.0000      1.539     4.023\n",
-            "7                density   0.996709   0.9967   0.9968      0.045     0.823\n",
-            "8                     pH   3.309492   3.3100   3.3000      0.233     0.888\n",
-            "9              sulphates   0.658587   0.6200   0.5400      2.406    11.068\n",
-            "10               alcohol  10.432315  10.2000   9.5000      0.859     0.155\n"
+            "            Variable RED   Media  Mediana     Moda  Asimetría  Curtosis\n",
+            "0          fixed acidity   8.313   7.9000   7.2000      0.940     1.048\n",
+            "1       volatile acidity   0.529   0.5200   0.5000      0.731     1.245\n",
+            "2            citric acid   0.273   0.2600   0.0000      0.312    -0.788\n",
+            "3         residual sugar   2.523   2.2000   2.0000      4.543    29.252\n",
+            "4              chlorides   0.088   0.0790   0.0800      5.496    38.478\n",
+            "5    free sulfur dioxide  15.893  14.0000   6.0000      1.225     1.881\n",
+            "6   total sulfur dioxide  46.826  38.0000  28.0000      1.539     4.023\n",
+            "7                density   0.997   0.9967   0.9968      0.045     0.823\n",
+            "8                     pH   3.309   3.3100   3.3000      0.233     0.888\n",
+            "9              sulphates   0.659   0.6200   0.5400      2.406    11.068\n",
+            "10               alcohol  10.432  10.2000   9.5000      0.859     0.155\n"
           ]
         }
       ]
