--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMmaP5Codcfz0r6Axx0/Ot",
+      "authorship_tag": "ABX9TyPGtvSSZ+bXK/pnNu4gnhnO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9061,7 +9061,7 @@
       "source": [
         "Un valor de **asimetría** (*skewness*) cercano a 0 (entre -0.5 y 0.5) indica que los datos están simétricamente distribuidos alrededor de la media. Valores positivos indican una distribución sesgada a la derecha (cola larga a la derecha), mientras que valores negativos indican una distribución sesgada a la izquierda (cola larga a la izquierda)\n",
         "\n",
-        "Por su parte, la **curtosis** (*kurtosis*) mide la \"agudeza\" de la distribución de los datos (o la concentración de los valores de la variable). La curtosis de Fisher, que es la que calcula 'scipy.stats.describe', está normalizada para que una distribución normal tenga una curtosis de 0. Valores positivos indican mayor concentración de los datos en torno a la media; es decir, una distribución con colas más pesadas (más picos, menos colas). Mientras que valores negativos indican una distribución de los datos más alejados de la media; es decir, con colas más ligeras (menos picos, más colas).\n",
+        "Por su parte, la **curtosis** (*kurtosis*) mide la heterogeneidad de la distribución de los datos (o la concentración de los valores de la variable). La curtosis de Fisher, que es la que calcula 'scipy.stats.describe', está normalizada para que una distribución normal tenga una curtosis de 0. Valores positivos indican mayor concentración de los datos en torno a la media; es decir, una distribución con colas más pesadas (más picos, menos colas). Mientras que valores negativos indican una distribución de los datos más alejados de la media; es decir, con colas más ligeras (menos picos, más colas).\n",
         "\n",
         "Luego, una distribución normal idealmente tiene una asimetría cercana a 0 y una curtosis cercana a 0."
       ],
@@ -9123,13 +9123,12 @@
         "resultsWhite = []        # lista para almacenar los resultados\n",
         "\n",
         "for feature in numerical_features:      # Calculo estadísticas descriptivas para cada característica\n",
-        "    metricas = stats.describe(df_white[feature])\n",
         "    resultsWhite.append([  feature,\n",
         "                      df_white[feature].mean().round(3),\n",
         "                      df_white[feature].median(),\n",
         "                      df_white[feature].mode()[0],\n",
-        "                      metricas.skewness.round(3),\n",
-        "                      metricas.kurtosis.round(3)])\n",
+        "                      stats.skew(df_white[feature]).round(3),\n",
+        "                      stats.kurtosis(df_white[feature]).round(3)])\n",
         "\n",
         "results_df = pd.DataFrame(resultsWhite, columns=['Variable WHITE', 'Media', 'Mediana', 'Moda', 'Asimetría', 'Curtosis'])   # Se crea un DataFrame con los resultados\n",
         "\n",
@@ -9140,9 +9139,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k-NAqngHM-wJ",
-        "outputId": "72fb0c8a-0d14-45b7-c304-e88ef6c6427c"
+        "outputId": "751d4af8-28b7-4990-8c31-7da19ad04646"
       },
-      "execution_count": 188,
+      "execution_count": 194,
       "outputs": [
         {
           "output_type": "stream",
@@ -9173,13 +9172,12 @@
         "resultsRed = []          # lista para almacenar los resultados\n",
         "\n",
         "for feature in numerical_features:      # Calculo estadísticas descriptivas para cada característica\n",
-        "    metricas = stats.describe(df_red[feature])\n",
         "    resultsRed.append([  feature,\n",
         "                      df_red[feature].mean().round(3),\n",
         "                      df_red[feature].median(),\n",
         "                      df_red[feature].mode()[0],\n",
-        "                      metricas.skewness.round(3),\n",
-        "                      metricas.kurtosis.round(3)])\n",
+        "                      stats.skew(df_red[feature]).round(3),\n",
+        "                      stats.kurtosis(df_red[feature]).round(3)])\n",
         "\n",
         "results_df = pd.DataFrame(resultsRed, columns=['Variable RED', 'Media', 'Mediana', 'Moda', 'Asimetría', 'Curtosis'])   # Se crea un DataFrame con los resultados\n",
         "\n",
@@ -9190,9 +9188,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yTLth9vpQw3L",
-        "outputId": "de9673c2-e0b9-41ed-fe1d-c61214827d50"
+        "outputId": "e5f37af2-dedc-4954-d995-c4608d881d60"
       },
-      "execution_count": 189,
+      "execution_count": 199,
       "outputs": [
         {
           "output_type": "stream",
@@ -9219,7 +9217,7 @@
       "source": [
         "💡 INSIGHTS\n",
         "\n",
-        "Del análisis estadístico pareciera que las variables que más se aproximan a una distribución normal son:\n",
+        "Según sus valores de asimetría y medidas de tendencia central, pareciera que las variables que más se aproximan a una distribución normal son:\n",
         "* En vinos blancos: \"alcohol\", \"total sulfur dioxide\" y \"pH\"\n",
         "* En vinos tintos: \"density\", \"pH\" y \"citric acid\"\n",
         "\n",
