--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGtvSSZ+bXK/pnNu4gnhnO",
+      "authorship_tag": "ABX9TyNEpkIOUQBayT0Se0TqvmaF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5455,6 +5455,8 @@
       "cell_type": "markdown",
       "source": [
         "💡 INSIGHTS\n",
+        "\n",
+        "Los valores >30% indican que los datos son heterogéneos; es decir, la media no es una buena representación para este conjunto.\n",
         "\n",
         "Si bien el coeficiente de variación es útil para entender la dispersión de los datos, éste no proporciona información sobre la forma de la distribución. Ésta será analizada en un posterior apartado."
       ],
