--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNEpkIOUQBayT0Se0TqvmaF",
+      "authorship_tag": "ABX9TyPBl4T3QajHd5zpZBxZVKsh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5414,39 +5414,46 @@
       "cell_type": "code",
       "source": [
         "encabezados = df.columns.tolist()\n",
+        "encabezados.remove('type')\n",
         "encabezados.remove('gama')\n",
         "encabezados.remove('gamaNro')\n",
         "\n",
+        "coefVar = []\n",
         "for i in range(len(encabezados)):\n",
-        "  coefVar = (df[encabezados[i]].std() / df[encabezados[i]].mean()) * 100\n",
-        "  print(f\"CV {encabezados[i]}: {coefVar.round(2)}\")"
+        "  CV_white = df_white[encabezados[i]].std() / df_white[encabezados[i]].mean() * 100\n",
+        "  CV_red = df_red[encabezados[i]].std() / df_red[encabezados[i]].mean() * 100\n",
+        "  coefVar.append([i, CV_white.round(2), CV_red.round(2)])\n",
+        "\n",
+        "coefVar_df = pd.DataFrame(coefVar, columns=['Variable', 'CV WHITE', 'CV RED'])   # Se crea un DataFrame con los resultados\n",
+        "\n",
+        "print(coefVar_df)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "WurQfxr8tWmn",
-        "outputId": "12be8841-286d-4d99-a185-ac052cc7a331"
+        "id": "bHi20NVoY4am",
+        "outputId": "b49bdb75-bc13-488a-bb76-29ce497118fd"
       },
-      "execution_count": 158,
+      "execution_count": 210,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CV type: 58.51\n",
-            "CV fixed acidity: 18.27\n",
-            "CV volatile acidity: 48.87\n",
-            "CV citric acid: 46.14\n",
-            "CV residual sugar: 89.1\n",
-            "CV chlorides: 65.01\n",
-            "CV free sulfur dioxide: 59.27\n",
-            "CV total sulfur dioxide: 49.73\n",
-            "CV density: 0.3\n",
-            "CV pH: 4.97\n",
-            "CV sulphates: 28.07\n",
-            "CV alcohol: 11.24\n",
-            "CV quality: 15.18\n"
+            "    Variable  CV WHITE  CV RED\n",
+            "0          0     12.65   20.87\n",
+            "1          1     36.88   34.57\n",
+            "2          2     36.60   71.70\n",
+            "3          3     82.15   53.59\n",
+            "4          4     50.28   56.03\n",
+            "5          5     49.32   65.73\n",
+            "6          6     31.43   71.35\n",
+            "7          7      0.29    0.19\n",
+            "8          8      4.74    4.68\n",
+            "9          9     23.16   25.91\n",
+            "10        10     11.50   10.37\n",
+            "11        11     15.21   14.65\n"
           ]
         }
       ]
