--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBl4T3QajHd5zpZBxZVKsh",
+      "authorship_tag": "ABX9TyNjhUSzxacItxR01JJyAnBg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5464,6 +5464,11 @@
         "💡 INSIGHTS\n",
         "\n",
         "Los valores >30% indican que los datos son heterogéneos; es decir, la media no es una buena representación para este conjunto.\n",
+        "\n",
+        "* En general, los vinos tintos muestran una mayor variabilidad en varias de sus características (como citric acid, free sulfur dioxide, y total sulfur dioxide) en comparación con los vinos blancos.\n",
+        "* Tanto en vinos blancos como tintos, las variables 'density', 'pH', 'alcohol', y 'quality' muestran baja variabilidad, indicando que los valores están bastante concentrados alrededor de la media.\n",
+        "* Las variables 'residual sugar', 'chlorides', 'free sulfur dioxide', y 'total sulfur dioxide' presentan alta variabilidad en ambos tipos de vino, sugiriendo una gran dispersión en los valores.\n",
+        "\n",
         "\n",
         "Si bien el coeficiente de variación es útil para entender la dispersión de los datos, éste no proporciona información sobre la forma de la distribución. Ésta será analizada en un posterior apartado."
       ],
